test/2/type/struct-field-follows-variant.err
test/2/type/struct-field-follows-variant.ploy:2:9-12: syntax error: positional field cannot follow a variant tag.
|   _:(-t Int) = ()
          ~~~
test/2/type/struct-field-follows-variant.ploy:2:6-8: note: first tag is here.
|   _:(-t Int) = ()
       ~~
